<resources>
    <string name="app_name">WorkEatWork</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="age">Age</string>
    <string name="email_add"> Email Add</string>
    <string name="pass_word"> Password</string>
    <string name="first_name"> First Name</string>
    <string name="last_name"> Last Name</string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="forward"><![CDATA[-->]]></string>
</resources>