<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">


    <Button
        android:id="@+id/btn_login"
        android:layout_width="346dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:onClick="openHomepage">

    </Button>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="347dp"
        android:layout_height="71dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="384dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="349dp"
        android:layout_height="67dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForgotpass"
        android:onClick="openForgot"
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="177dp"
        android:text="Forgot Password?"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>