<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".Account">



    <LinearLayout
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_btn"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="26dp"
        tools:layout_editor_absoluteX="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_prev" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="635dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="96dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            app:srcCompat="@drawable/person_profile_icon" />

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name: " />

        <TextView
            android:id="@+id/Changephoto"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Profile photo" />

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#ffffff" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GENERAL INFO" />

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#ffffff" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:hint="@string/first_name"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_enter"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_enter"
            android:hint="@string/last_name"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_add"
            android:hint="@string/email_add"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_enter"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_word"
            android:hint="@string/pass_word"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_enter"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            />

        <Button
            android:id="@+id/btnlogout"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="29dp"
            android:text="Log Out"
            android:layout_marginLeft="28dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="42dp" />
</androidx.constraintlayout.widget.ConstraintLayout>